tests/bad/use_stmt.glaz
use undeclared_module::*;

mod minetest {
    pub fn init() {}
}

use minetest::init;
use minetest::init;

use minetest::init as mine_init;
use minetest::init as mine_init;

use minetest::{ self, self, mine_drop };

fn main() {}
